Use hyphen for bullet points, fix mermaid diagram

--- a/labs/section-1/lab-01-ipv6-underlay.mdx
+++ b/labs/section-1/lab-01-ipv6-underlay.mdx
@@ -116,7 +116,7 @@ Now test connectivity:
 
 :::caution
 If traffic drops during the failover test for more than a packet or two:
-	•	Ensure BFD is running on both sides for each link (check show bfd peers).
-	•	Verify ECMP is working: both spines should be in the routing table of Leaf1 for Leaf2’s prefix (and vice versa).
-	•	Check for any interface errors or mismatches in configurations.
+- Ensure BFD is running on both sides for each link (check show bfd peers).
+- Verify ECMP is working: both spines should be in the routing table of Leaf1 for Leaf2’s prefix (and vice versa).
+- Check for any interface errors or mismatches in configurations.
 :::
