Remove default blog posts and docs. Customize authors and tags.

--- a/blog/2025-08-29-launch.md
+++ b/blog/2025-08-29-launch.md
@@ -1,8 +1,7 @@
 ---
 slug: welcome
 title: "Welcome to Bare Metal Networking for Private Clouds"
-author: "Steven Cassamajor"
-author_title: "Founder, Network Axis"
+authors: [cassamajor]
 tags: [announcement, changelog]
 ---
 
