Disable DocCardList while content is listed in draft mode

--- a/docs/section-1/index.mdx
+++ b/docs/section-1/index.mdx
@@ -16,7 +16,7 @@ In this section, we will design a spine-leaf IPv6 fabric with unnumbered BGP, EC
 2. Case Study - Nokia Kubernetes Service
 
 
-import DocCardList from '@theme/DocCardList';
+{/* import DocCardList from '@theme/DocCardList'; */}
 
 {/* Shows the same child cards you'd get from a generated-index */}
-<DocCardList />
+{/* <DocCardList /> */}
