--- a/docs/section-3/index.mdx
+++ b/docs/section-3/index.mdx
@@ -27,7 +27,7 @@ We will explain each line at great length, covering:
 We'll cover the Program Types, Map Types, and Kernel Hooks that are relevant to our eBPF program. We'll also address tradeoffs, in ADR fashion, so you know why certain decisions were made in lieu of other options.
 	- We will also point to other references (official docs, etc.) if course participants want to dive deeper into alternative types and options.
 
-import DocCardList from '@theme/DocCardList';
+{/* import DocCardList from '@theme/DocCardList'; */}
 
 {/* Shows the same child cards you'd get from a generated-index */}
-<DocCardList />
+{/* <DocCardList /> */}
