--- a/docs/section-2/index.mdx
+++ b/docs/section-2/index.mdx
@@ -12,7 +12,7 @@ Once we bootstrap the Kubernetes cluster, we will integrate it into the L3 fabri
 3. Configure Cilium manifests
 4. [Tuning Ciliun](https://docs.cilium.io/en/latest/operations/performance/tuning/) for optimal performance
 
-import DocCardList from '@theme/DocCardList';
+{/* import DocCardList from '@theme/DocCardList'; */}
 
 {/* Shows the same child cards you'd get from a generated-index */}
-<DocCardList />
+{/* <DocCardList /> */}
