--- a/blog/2025-10-08/2025-10-08.md
+++ b/blog/2025-10-08/2025-10-08.md
@@ -4,10 +4,18 @@ authors: [cassamajor]
 date: 2025-10-08
 image: ./image.png
 keywords: [eBPF, Cilium, Talos Linux, Kubernetes networking, IPv6 underlay, BGP, Service Function Chaining, Bare Metal Networking, CNF, netkit]
-description: eBPF turns the datapath into programmable infrastructure. Here’s a practical blueprint for aligning pure L3 fabrics, Kubernetes, and CNFs so networks and platforms work as one system.
+description: This is the context of why I am trying to build a router that combines declarative infrastructure with programmable networking.
 tags: [Networking, Kubernetes, eBPF, Cilium, Talos, Architecture]
 ---
 
+
+This blog post describes why I am trying to build a router that combines declarative infrastructure with programmable networking.
+
+This is my origin story.
+
+/cue Spiderman theme-song
+
+<!-- truncate -->
 
 1. Custom Kernel Modules -> eBPF
 1. NFV -> VNF -> CNF
