Fix typo: Ciliun -> Cilium

--- a/docs/section-2/index.mdx
+++ b/docs/section-2/index.mdx
@@ -10,7 +10,7 @@ Once we bootstrap the Kubernetes cluster, we will integrate it into the L3 fabri
 1. Configure Cilium Helm Chart
 2. Configure Talos Linux
 3. Configure Cilium manifests
-4. [Tuning Ciliun](https://docs.cilium.io/en/latest/operations/performance/tuning/) for optimal performance
+4. [Tuning Cilium](https://docs.cilium.io/en/latest/operations/performance/tuning/) for optimal performance
 
 {/* import DocCardList from '@theme/DocCardList'; */}
 
