Update sections -> modules to align with course positioning

--- a/docs/section-1/index.mdx
+++ b/docs/section-1/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Section 1: Pure L3 Data Center"
-description: "Design a spine-leaf IPv6 fabric with unnumbered BGP, ECMP, and <50ms failover."
+title: "Network Architecture"
+description: "Scalable Layer 3 Data Center (case studies, theory)"
 ---
 
 In this section, we will design a spine-leaf IPv6 fabric with unnumbered BGP, ECMP, BFD.
