--- a/docs/section-2/index.mdx
+++ b/docs/section-2/index.mdx
@@ -1,11 +1,12 @@
 ---
-title: "Section 2: Cloud-Native Router"
+title: "Network Architecture"
 description: "Bootstrap a Kubernetes cluster, and integrate it with the L3 fabric to create a programmable router."
 ---
 
-### A New Take on Routing and Switching
-In this section, we will learn how to automate the provisioning Kubernetes cluster via Talos Linux and the configuration of Cilium.
+In this module, we will learn how to automate the provisioning Kubernetes cluster via Talos Linux and the configuration of Cilium.
 Once we bootstrap the Kubernetes cluster, we will integrate it into the L3 fabric to create a programmable router.
+
+This module includes practical, hands-on labs: (Cilium, Talos provisioning, testing, performance).
 
 1. Configure Cilium Helm Chart
 2. Configure Talos Linux
