--- a/docs/section-3/index.mdx
+++ b/docs/section-3/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Section 3: Networking with eBPF"
-description: "Develop eBPF-based network functions and achieve kernel-level performance."
+title: "Network Functions"
+description: "Develop eBPF-based network functions and achieve kernel-level performance. eBPF and CNF Development"
 ---
 
 In this section, we will develop eBPF-based network functions and achieve kernel-level performance.
