Hide previous sections from sidebar

--- a/docs/.section-2/index.mdx
+++ b/docs/.section-2/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Network Architecture"
+title: "Network Infrastructure"
 description: "Bootstrap a Kubernetes cluster, and integrate it with the L3 fabric to create a programmable router."
 ---
 
